force-app/main/default/objects/Exception__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Class name.</description>
    <label>Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>