force-app/main/default/objects/Exception__c/fields/DmlFieldNames__c.field-meta.xml
<CustomField>
    <fullName>DmlFieldNames__c</fullName>
    <description>The names of the field or fields that caused the error.</description>
    <label>Dml Field Names</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>