force-app/main/default/objects/Exception__c/fields/DmlId__c.field-meta.xml
<CustomField>
    <fullName>DmlId__c</fullName>
    <description>The ID of the failed record that caused the error.</description>
    <label>Dml Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>