force-app/main/default/objects/Exception__c/fields/DmlIndex__c.field-meta.xml
<CustomField>
    <fullName>DmlIndex__c</fullName>
    <description>The original row position of the failed row.</description>
    <label>Dml Index</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>