force-app/main/default/objects/Exception__c/fields/DmlMessage__c.field-meta.xml
<CustomField>
    <fullName>DmlMessage__c</fullName>
    <description>The user message for the failed row.</description>
    <label>Dml Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>