force-app/main/default/objects/Exception__c/fields/DmlType__c.field-meta.xml
<CustomField>
    <fullName>DmlType__c</fullName>
    <description>The value of the System.StatusCode enum.</description>
    <label>Dml Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>