force-app/main/default/objects/Exception__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Error message that displays for the user.</description>
    <label>Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>