force-app/main/default/objects/Exception__c/fields/NumDml__c.field-meta.xml
<CustomField>
    <fullName>NumDml__c</fullName>
    <description>The number of failed rows for DML exceptions.</description>
    <label>Num Dml</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>