force-app/main/default/objects/Exception__c/fields/StackTraceString__c.field-meta.xml
<CustomField>
    <fullName>StackTraceString__c</fullName>
    <description>Stack trace as a string.</description>
    <label>Stack Trace String</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>