force-app/main/default/objects/Exception__c/fields/TypeName__c.field-meta.xml
<CustomField>
    <fullName>TypeName__c</fullName>
    <description>Type of exception, such as DmlException, ListException, MathException, and so on.</description>
    <label>Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>